# KnR-Exercise-1-24

./: CMakeLists.txt  main.c
1-20/: main.c
1-20/test files/: test 4 input.txt  test 4 output.txt
1-21/: main.c
1-21/test files/: test 2 input.txt  test 3 input.txt  test 5 input.txt  test 5 output.txt
1-24/test files/: test21.txt  test23.txt  test24.txt  test26.txt
test files/: test15.txt  test22.txt
